--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,10 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'javax.persistence:javax.persistence-api:2.2'
+    implementation 'com.google.guava:guava:30.1-jre'
 }
 
-tasks.named('test') {
+ tasks.named('test') {
     useJUnitPlatform()
 }
