--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'javax.persistence:javax.persistence-api:2.2'
     implementation 'com.google.guava:guava:30.1-jre'
+    implementation platform('com.google.cloud:libraries-bom:26.24.0')
+    implementation 'com.google.cloud:google-cloud-bigtable'
 }
 
  tasks.named('test') {
