--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
     id 'java'
     id 'org.springframework.boot' version '3.1.4'
     id 'io.spring.dependency-management' version '1.1.3'
+     id "io.freefair.lombok" version "8.4"
 }
 
 group = 'com.example'
