--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'com.google.guava:guava:30.1-jre'
     implementation platform('com.google.cloud:libraries-bom:26.24.0')
     implementation 'com.google.cloud:google-cloud-bigtable'
+    implementation 'com.auth0:java-jwt:3.18.1'
 }
 
  tasks.named('test') {
