--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,13 @@
- plugins {
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.2.0'
+    }
+}
+
+plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.4'
     id 'io.spring.dependency-management' version '1.1.3'
@@ -7,6 +16,8 @@
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
+
+apply plugin: 'com.google.cloud.tools.appengine'
 
 java {
     sourceCompatibility = '17'
@@ -28,4 +39,11 @@ dependencies {
 
  tasks.named('test') {
     useJUnitPlatform()
+}
+
+appengine {  // App Engine tasks configuration
+    deploy {   // deploy configuration
+        projectId = 'rice-comp-539-spring-2022' // gcloud config set project
+        version = 'f23-team4-v1'   // gcloud to generate a version
+    }
 }
